[package]
name = "pluck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15"
egg-mode = { version = "0.16", features = ["rustls"], default-features = false }
indexmap = { version = "1.9", features = ["serde"] }
querystring = "1.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["chrono_0_4"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
